# fdf

./: CMakeLists.txt  Makefile  README.md  author  color.c  fdf.h  inits.c  keys.c  lines.c  main.c  map.c  mod.c  zoom.c
includes/: fdf.h
libft/libft/: ccprint.c  check.c  color.c  cprint.c  fprint.c  free_p.c  ft_atoi.c  ft_bigpart.c  ft_bzero.c  ft_count.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_list_pback.c  ft_list_pfront.c  ft_littlesmall.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_mult.c  ft_onespace.c  ft_power.c  ft_print_bits.c  ft_print_membit.c  ft_print_memory.c  (+60 more)
newfdf/newfdf.xcodeproj/: project.pbxproj
newfdf/newfdf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
newfdf/newfdf.xcodeproj/project.xcworkspace/xcuserdata/aim1c.xcuserdatad/: UserInterfaceState.xcuserstate
newfdf/newfdf.xcodeproj/xcshareddata/xcschemes/: newfdf.xcscheme
newfdf/newfdf.xcodeproj/xcuserdata/aim1c.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
newfdf/newfdf.xcodeproj/xcuserdata/aim1c.xcuserdatad/xcschemes/: xcschememanagement.plist
newfdf/newfdf/includes/: color.c  f.c  inits.c  keys.c  lines.c  main.c  map.c  zoom.c
newfdf/newfdf/lib/: fdf.h
newfdf/newfdf/maps/: newfdf
src/: color.c  f.c  inits.c  keys.c  lines.c  main.c  map.c  mod.c  zoom.c
